app/styles/app.css
/* ... */
.main-info > .main-selection > .purchase-option > p > div,
.main-info > .main-selection > .purchase-option > p > span > div {
  display: inline;
}

.main-info > .main-selection > .purchase-option:first-of-type {
  border-bottom: 1px solid white;
}

.main-info > .main-selection > .purchase-option > input {
  width: 1.2rem;
  height: 1.2rem;
  appearance: none;
  background-color: var(--button-color);
  mask-image: url("/checkbox.svg");
  mask-size: contain;
  mask-repeat: no-repeat;
  mask-position: center;
  margin-right: 2rem;
  cursor: pointer;
}

.main-info > .main-selection > .purchase-option > input:checked {
  mask-image: url("/checkboxChecked.svg");
}

.main-info > .main-selection > .purchase-option > p {
  font-size: 1.125rem;
  line-height: 1.35rem;
}

.main-info > .main-selection > .purchase-option > p > span {
  color: #b9b9b9;
  font-size: 0.875rem;
  line-height: 1.05rem;
}

.main-info > .main-selection > .selection-container {
  width: calc(100% - 7rem);
  padding: 0 1.5rem 0 1.5rem;
  margin-left: 32px;
  margin-bottom: 1rem;
  border: 1px solid white;
  border-radius: 1rem;
}

.main-info > .main-selection > .selection-container > select {
  width: 100%;
  padding: 1rem 0 1rem 0;
  background-color: transparent;
  color: white;
  font-size: 0.875rem;
  line-height: 1.05rem;
  border: none;
  outline: none;
}

.main-info > .main-selection > .selection-container > select:disabled {
  color: white;
  opacity: 0.5;
}

.main-info > .main-selection > .selection-container > select > option {
  color: white;
  background-color: black;
  font-size: 0.875rem;
  line-height: 1.05rem;
  border: none;
}

.main-info > .main-selection > ul {
  padding: 0 2rem 0 3.6rem;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.main-info > .main-selection > ul > li {
  list-style: none;
  font-size: 0.875rem;
  perspective: 0;
}

.main-info > .main-selection > ul > li::before {
  height: 100%;
  position: absolute;
  margin-left: -1.6rem;
  content: url("/checkCircle.svg");
  align-content: center;
}

.main-info > .main-selection > ul > li > strong {
  color: var(--green-text);
}

.main-info > .main-selection > ul > li > a {
  text-decoration: underline;
}

.main-info > .main-selection > ul > li > strong > del > div,
.main-info > .main-selection > ul > li > strong > div {
  display: inline;
}

.main-info > form:not(.main-selection) {
  width: 100%;
  padding: 0;
  margin: 0;
}

.main-info > form:not(.main-selection) > .add-to-cart {
  width: 100%;
  padding: 1rem 3.25rem 1rem 3.25rem;
  margin-top: 2rem;
  border-radius: 69px;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.2rem;
  text-align: center;
  color: white;
  border: none;
  background-color: var(--button-color);
  transition: background-color 0.3s;
  transition-timing-function: cubic-bezier(0.88, 0, 0.12, 1);
  cursor: pointer;
}

.main-info > form:not(.main-selection) > .add-to-cart:hover {
  background-color: var(--button-color-hover);
}

.main-info > .shipping-info {
  display: flex;
  justify-content: space-between;
}

.main-info > .shipping-info > div {
  width: 25%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 2rem;
}

.main-info > .shipping-info > div > img {
  width: 2.375rem;
  height: 2.375rem;
  margin-bottom: 1rem;
}

.main-info > .shipping-info > div > p {
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 0.875rem;
  text-align: center;
  white-space: nowrap;
}

.why-were-special {
  margin-top: 2rem;
  margin-bottom: 2rem;
  width: calc(100% - 4rem);
  background-color: #0c2b25;
  border-radius: 6px;
  padding: 2rem;
}

.why-were-special > h2 {
  font-size: 1.125rem;
  font-weight: 700;
  line-height: 1.35rem;
}

.why-were-special > h3 {
  display: flex;
  align-items: center;
  margin-bottom: 0;
  margin-left: 1.6rem;
  font-size: 1.125rem;
  font-weight: 700;
  line-height: 1.35rem;
  perspective: 0;
}

.why-were-special > h3::before {
  width: 0.3rem;
  height: 0.3rem;
  margin-left: -0.8rem;
  position: absolute;
  background-color: white;
  border-radius: 100%;
  content: "";
}

.why-were-special > p {
  margin-left: 0.625rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.2rem;
}

.main-info > .expandable-info {
  height: 3.5rem;
  border-top: 1px solid white;
  overflow: hidden;
  transition: max-height 0.3s;
  transition-timing-function: cubic-bezier(0.77, 0, 0, 0.77);
}

.main-info > .expandable-info:last-of-type {
  border-bottom: 1px solid white;
}

.main-info > .expandable-info > h2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  margin: 0;
  height: 1rem;
  font-size: 1.125rem;
  font-weight: 700;
  line-height: 1rem;
  perspective: 0;
  color: white;
  cursor: pointer;
}

.main-info > .expandable-info > h2 > button {
  height: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.main-info > .expandable-info > p {
  font-size: 1rem;
  line-height: 1.2rem;
  margin-top: 0;
  margin-bottom: 1.25rem;
}

.main-info > .expandable-info > p > ul {
  margin: 0;
}

.main-info > .expandable-info > p > ul > li {
  margin: 0;
}

.mobile-image-cover {
  display: none;
}
/* ... */

